Fix date input layout on Safari

--- a/apps/web/src/components/ui.css
+++ b/apps/web/src/components/ui.css
@@ -129,6 +129,33 @@
   padding-right: 36px;
 }
 
+.field input[type="date"] {
+  display: block;
+  inline-size: 100%;
+  min-inline-size: 0;
+  -webkit-min-logical-width: 0;
+  padding-right: 44px;
+}
+
+@supports (-webkit-touch-callout: none) {
+  .field input[type="date"] {
+    appearance: none;
+    -webkit-appearance: none;
+    line-height: 1.2;
+  }
+
+  .field input[type="date"]::-webkit-date-and-time-value {
+    min-width: 0;
+    min-height: 1.2em;
+    text-align: left;
+  }
+
+  .field input[type="date"]::-webkit-calendar-picker-indicator {
+    margin: 0;
+    padding: 0;
+  }
+}
+
 .field input:focus,
 .field select:focus,
 .field textarea:focus {
